 - Stage & main view: restore view position when reloading.
 - Blame view: load blame for parent commit. For merge commits the parent
   is queried. Bound to ',' by default via the existing "parent" action.
 - Abbreviate author names to initials when the width of the author column
   is below 6 characters.

Bug fixes:

 - Tree view: fix memory corruption bug when updating.
 - Status view: fix reverting of unmerged files.
 - Fix regression for non-UTF-8 locales corrupting the view data.
 - Fix regression parsing multiple spaces in ~/.tigrc.

tig-0.13
--------

Incompatibilities:

 - Commands from the environment (e.g. TIG_MAIN_CMD) will no longer have
   access to shell features, such as subshells and variable expansion.
   The easiest way to upgrade your configuration is to put such commands
   in a script file.

Improvements:

 - Display repository references in the sorted order: tags, heads,
   tracked remotes, remotes.
 - Add bash completion for blame.
 - Tree view: edit files of the current branch.
 - Run requests: new identifiers %(directory), %(file), and %(ref)
 - Improve responsiveness and view loading speed by using select(2).

Bug fixes:

 - Separate blame revision and file argument by "--" to avoid problems.
 - Main view: fix redrawing of the last commit wrt. the revision graph.
 - Fix waiting for input after executing a run request in pager mode.
 - Status & stage view: refuse to open directories and deleted files.
 - Tree view: show error when requesting blame for all non-file entries.
 - Do not draw loading views, which are not displayed.
 - Fix launching of mergetool from a subdirectory.

tig-0.12.1
----------

Improvements:

 - Status view: revert uncommitted diff chunks and unstaged files with
   changes. Bound to '!' by default.
 - Main view: use --topo-order also when rev-list arguments are given on
   the command line.
 - Log view: support for refreshing.

Bug fixes:

 - Status view: use ls-files' --exclude-standard so user specific ignore